// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Home - Snapshots > matches snapshot for HomeActions with default props 1`] = `
<div
  data-testid="action-buttons"
>
  <button
    data-testid="learn-button"
  >
    Learn
  </button>
  <button
    data-testid="create-account-button"
  >
    Create Account
  </button>
  <button
    data-testid="explore-button"
  >
    Explore
  </button>
</div>
`;

exports[`Home - Snapshots > matches snapshot for HomeBrandFooter with default props 1`] = `
<div
  class="landing-brand-footer inline-flex min-w-max items-center gap-2 whitespace-nowrap transition-opacity duration-300 [&_*]:shrink-0"
>
  <a
    class="inline-flex items-center"
    data-testid="link"
    href="https://synonym.to"
    target="_blank"
  >
    <img
      alt="Synonym"
      data-testid="image"
      height="24"
      src="/images/synonym-grey-logo.svg"
      width="95"
    />
  </a>
  <a
    class="inline-flex items-center"
    data-testid="link"
    href="https://tether.io/"
    target="_blank"
  >
    <img
      alt="a tether. company"
      data-testid="image"
      height="16"
      src="/images/a-tether-company.svg"
      width="109"
    />
  </a>
</div>
`;

exports[`Home - Snapshots > matches snapshot for HomeFooter with default props 1`] = `
<div
  class="flex-1 flex-col items-start justify-end gap-1"
  data-testid="container"
>
  <div
    data-testid="footer-links"
  >
    By creating a 
    <span
      class="text-brand"
    >
      Pubky
    </span>
     account, you agree to the
     
    <span
      data-testid="dialog-terms"
    >
      Terms of Service
    </span>
    , 
    <span
      data-testid="dialog-privacy"
    >
      Privacy Policy
    </span>
    , and confirm you are
     
    <span
      data-testid="dialog-age"
    >
      over 18 years old
    </span>
     
    Pubky is powered by 
    <a
      data-testid="link"
      href="https://github.com/pubky/pubky-core"
      target="_blank"
    >
      Pubky Core
    </a>
     and was built with love and dedication by Synonym Software, S.A. DE C.V. ©2026. All rights reserved.
  </div>
  <div
    class="landing-brand-footer inline-flex min-w-max items-center gap-2 whitespace-nowrap transition-opacity duration-300 [&_*]:shrink-0 mt-2"
  >
    <a
      class="inline-flex items-center"
      data-testid="link"
      href="https://synonym.to"
      target="_blank"
    >
      <img
        alt="Synonym"
        data-testid="image"
        height="24"
        src="/images/synonym-grey-logo.svg"
        width="95"
      />
    </a>
    <a
      class="inline-flex items-center"
      data-testid="link"
      href="https://tether.io/"
      target="_blank"
    >
      <img
        alt="a tether. company"
        data-testid="image"
        height="16"
        src="/images/a-tether-company.svg"
        width="109"
      />
    </a>
  </div>
</div>
`;

exports[`Home - Snapshots > matches snapshot for HomePageHeading with default props 1`] = `
<div
  data-size="2xl"
  data-testid="heading-1"
>
  <span
    class="text-brand"
  >
    Unlock
  </span>
  <br />
   the web.
</div>
`;

exports[`Home - Snapshots > matches snapshot for HomeSectionTitle with default props 1`] = `
<div
  class="flex-row items-start gap-2"
  data-testid="container"
>
  <h2
    class="self-center text-xl font-light text-muted-foreground sm:text-3xl"
    data-testid="typography"
  >
    Your keys, your content, your rules.
  </h2>
</div>
`;
